welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: ';' expected but 'false' found.
if (estFaceMur())==false {
                   ^